css/queries.css
/**************************/
/* BELOW 908px (Tablets) */
/**************************/

/* @media (max-width: 48em) { */
@media (max-width: 56.75em) {
  .btn-mobile-nav {
    display: block;
  }

  .primary-heading {
    font-size: 5.6rem;
  }

  .hero {
    padding: 0 4rem;
  }

  .projects-section {
    grid-template-columns: 1fr;
    gap: 2.4rem;
    padding: 4rem;
  }

  .project-title {
    font-size: 2.2rem;
  }
  .project-text {
    font-size: 1.4rem;
  }

  .container {
    max-width: 51.5rem;
    padding: 0 4rem;
  }

  .brands-section .logos-list {
    grid-template-columns: repeat(3, 1fr);
  }

  .agencies-section .logos-list {
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    gap: 4.7rem;
  }

  .secondary-heading {
    text-align: center;
  }
  /*  */
  .panel-section {
    height: 90rem;
  }

  .panel-content {
    flex-direction: column;
    gap: 5.5rem;
  }

  .panel-title {
    text-align: center;
    margin-bottom: 3.2rem;
  }

  .panel-subtitle {
    text-align: center;
    margin-bottom: 5.7rem;
  }

  .panel-buttons {
    flex-direction: column;
    gap: 1.6rem;
  }

  /*  */

  .footer-nav {
    margin-bottom: 8rem;
  }

  .nav-list {
    gap: 2.2rem;
  }

  /* MOBILE NAVIGATION */
  .btn-mobile-nav {
    display: block;
    z-index: 9999;
  }

  .header-nav {
    background-color: rgb(37, 60, 108, 0.9);
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(10px);
    /* position: absolute; */
    position: fixed; /* Change to fixed for full-screen overlay */
    inset: 0;
    width: 100%;
    height: 100vh;
    transform: translateX(100%);

    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.3s ease-in;

    /* 1) Hide it visually */
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
    z-index: 999;
  }

  .nav-open .header-nav {
    opacity: 1;
    pointer-events: auto;
    visibility: visible;
    transform: translateX(0);
  }

  .nav-open .icon-mobile-nav[name="close-outline"] {
    display: block;
  }

  .nav-open .icon-mobile-nav[name="menu-outline"] {
    display: none;
  }

  .header-nav-list {
    flex-direction: column;
    gap: 4.8rem;
  }

  .header-nav-list .nav-link:link,
  .header-nav-list .nav-link:visited {
    font-weight: 500;
    font-size: 2.3rem;
  }

  /* OTHER PAGES */
  .header-white .nav-link:link,
  .header-white .nav-link:visited {
    color: #fff;
  }
  .header-white .nav-link:hover,
  .header-white .nav-link:active {
    color: #9faece;
  }

  .hero-common-section {
    min-height: 50vh;
  }

  .hero-common {
    margin-bottom: 8rem;
  }

  .about-section {
    margin-bottom: 4rem;
  }

  /* //////////////////////// */
  /* TEMPLATE PAGE */
  /* //////////////////////// */

  .template-hero-section .hero-common-description {
    margin-bottom: 5.4rem;
  }

  .template-hero--line {
    width: 98%;
    height: 1px;
    background-color: rgba(34, 34, 34, 0.1);
    margin-bottom: 6.4rem;
  }

  .template-container {
    padding: 0 2.6rem;
  }
}

/**************************/
/* BELOW 544px (Phones) */
/**************************/

@media (max-width: 34em) {
  .primary-heading {
    font-size: 4rem;
    margin-bottom: 3.6rem;
  }

  .hero {
    padding: 0 2.4rem;
  }

  .projects-section {
    padding: 2.4rem;
  }

  .container {
    padding: 0 2.4rem;
  }

  .brands-section {
    height: 75rem;
    /* padding: 0 2.4rem; */
  }

  .brands-section .logos-list {
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
  }

  .agencies-section {
    height: 75rem;
  }

  .agencies-section .logos-list {
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    gap: 4.7rem;
  }

  /*  */
  .footer-section {
    background-color: #0a1a3d;
    padding-top: 9.4rem;
    padding-bottom: 4.2rem;
  }

  .footer-nav {
    flex-direction: column;
    gap: 4.65rem;

    margin-bottom: 8rem;
  }

  .copyright-box {
    flex-direction: column-reverse;
    gap: 4.4rem;
  }

  /* OTHER PAGES */

  .hero-common-title {
    margin-bottom: 2.4rem;
  }

  /* //////////////////////// */
  /* TEMPLATE PAGE */
  /* //////////////////////// */

  .job-details {
    display: grid;
    grid-template-columns: 1fr;

    row-gap: 2.4rem;
  }

  .job-experience {
    grid-row: 2 / 2;
  }

  .job-year {
    margin-top: 3.2rem;
  }

  .template-section {
    margin-bottom: 4rem;
  }

  .section-title {
    font-size: 3.2rem;
  }

  .section-description {
    font-size: 1.6rem;
    line-height: 24px;

    max-width: 90%;
  }

  .details-box {
    flex-direction: column;
    gap: 0;
  }

  .details-box .tag-box {
    width: 100%;
    justify-content: flex-start;
    margin: 0;
    margin-bottom: 6.8rem;
  }

  .text-box {
    margin-bottom: 2rem;
  }

  .double-imgs {
    padding: 0 2.6rem;
    width: 100%;
    flex-direction: column;
    gap: 2rem;
  }

  .double-imgs img {
    margin-bottom: 0;
  }

  .template-portfolio--title {
    font-size: 3.2rem;
  }
}

/**************************/
/* BELOW 450px (Phones) */
/**************************/

@media (max-width: 28.125em) {
  .secondary-heading {
    font-size: 3.2rem;
  }

  .agencies-section {
    height: 60rem;
  }

  .panel-img {
    width: 100%;
    padding: 0 2.2rem;
  }

  .footer-nav-list {
    gap: 2.8rem;
  }

  /* OTHER PAGES */

  .hero-common-title {
    font-size: 3.8rem;
    line-height: 50px;
  }

  .hero-common-description {
    font-size: 2.3rem;
  }
}

